--- a/css/style.css
+++ b/css/style.css
@@ -1440,7 +1440,7 @@ i.fa-solid.fa-eye{color: #fff;transition: .5s;}
     FOOTER STYLE START
 =============================*/
 footer{
-    background: #043947;
+    background: violet;
     padding: 150px 0px;
     color: #fff;
     position: relative;
